@@ -9,6 +9,8 @@ $HeadURL$
     * many scripts: we were using "uva" in variables and function names,
       this was code suggested by University of Virginia; I improved the code
       by removing this uva prefix
+    * libraries/export/sql.php: patch #1595784, add charset information
+      to SQL export, thanks to Christian Schmidt
 
 2006-12-07 Marc Delisle  <lem9@users.sourceforge.net>
     * libraries/ip_allow_deny.lib.php: checks that the header contains
